--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <div class="container-fluid">
   <ul>
     <li><%= link_to 'Home', root_path %></li>
-    <li><%= link_to 'Add a NBA player', new_nbaplayer_path %></li>
+    <li><%= link_to 'Add an NBA player', new_nbaplayer_path %></li>
     <li><%= link_to 'NBA Player Database', nbaplayers_path %></li>
   </ul>
   </div>
