--- a/app/views/nbaplayers/_form.html.erb
+++ b/app/views/nbaplayers/_form.html.erb
@@ -13,15 +13,15 @@
 
   <div class="field">
     <%= f.label :name %><br>
-    <%= f.text_area :name %>
+    <%= f.text_field :name %>
   </div>
   <div class="field">
     <%= f.label :position %><br>
-    <%= f.text_area :position %>
+    <%= f.text_field :position %>
   </div>
   <div class="field">
     <%= f.label :team %><br>
-    <%= f.text_area :team %>
+    <%= f.text_field :team %>
   </div>
   <div class="field">
     <%= f.label :avgfanduelpoints %><br>
