--- a/app/views/nbaplayers/_form.html.erb
+++ b/app/views/nbaplayers/_form.html.erb
@@ -24,8 +24,8 @@
     <%= f.text_field :team %>
   </div>
   <div class="field">
-    <%= f.label :avgfanduelpoints %><br>
-    <%= f.number_field :avgfanduelpoints %>
+    <%= f.label :avgpoints %><br>
+    <%= f.number_field :avgpoints %>
   </div>
   <div class="field">
     <%= f.label :is_starting_lineup %><br>
