--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -2,26 +2,33 @@ body {
   background-color: #fff;
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
   line-height: 18px;
 }
 table{
   margin:0 auto;
   vertical-align: center;
-  font-size: 1.5em;
   padding: 1em;
   thead{
+    text-align: left;
     tr{
       th{
-        padding: .5em;
+        font-size: 1.8em;
+        padding: 1.5em;
       }
     }
   }
-  td{
-    padding: 1em;
+  tbody{
+    tr{
+      td{
+        font-size: 1.2em;
+      }
+    }
   }
   p{
     font-size: 1em;
+  }
+  a{
+    padding: 1em;
   }
 }
 
@@ -38,12 +45,13 @@ pre {
 }
 
 a {
-  color: #000;
+  color: #fff;
   &:visited {
     color: #666;
   }
   &:hover {
     color: black;
+    text-decoration: none;
   }
 }
 
@@ -52,7 +60,6 @@ div {
     margin-bottom: 10px;
     font-size: 1.4em;
     padding: .3em;
-    display: inline-block;
   }
 }
 
