--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,7 +1,6 @@
 body {
   background-color: #fff;
   color: #333;
-  font-family: verdana, arial, helvetica, sans-serif;
   line-height: 18px;
 }
 table{
@@ -12,8 +11,8 @@ table{
     text-align: left;
     tr{
       th{
-        font-size: 1.8em;
-        padding: 1.5em;
+        font-size: 1.5em;
+        padding: 1em;
       }
     }
   }
@@ -28,32 +27,23 @@ table{
     font-size: 1em;
   }
   a{
-    padding: 1em;
+    font-size: 1em;
+    padding: .5em;
   }
-}
-
-p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 1em;
-  line-height: 18px;
-}
-
-pre {
-  background-color: #eee;
-  padding: 10px;
-  font-size: 11px;
-}
-
-a {
-  color: #fff;
-  &:visited {
-    color: #666;
-  }
-  &:hover {
+  a:hover{
     color: black;
-    text-decoration: none;
+    text-deocration: none;
   }
 }
+a{
+  padding: .5em;
+  font-size: 1.5em;
+}
+a:hover{
+  color: black;
+  text-decoration: none;
+}
+
 
 div {
   &.field, &.actions {
