--- a/app/views/nbaplayers/edit.html.erb
+++ b/app/views/nbaplayers/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Nbaplayer</h1>
+<h3>Editing NBA Player</h3>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @nbaplayer %> |
-<%= link_to 'Back', nbaplayers_path %>
+<div class="links">
+  <%= link_to 'Show', @nbaplayer %> |
+  <%= link_to 'Back', nbaplayers_path %>
+</div>
