--- a/app/views/nbaplayers/home.html.erb
+++ b/app/views/nbaplayers/home.html.erb
@@ -1,2 +1,2 @@
-<h1>NBA Player Database</h1>
-<p>A record of NBA Player statistics</p>
+<h2>NBA Player Database</h2>
+<h3>A record of NBA Player statistics</h3>
