--- a/app/views/nbaplayers/new.html.erb
+++ b/app/views/nbaplayers/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Nbaplayer</h1>
+<h3>New NBA Player</h3>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', nbaplayers_path %>
+<div class="links"><%= link_to 'Back', nbaplayers_path %></div>
