--- a/app/views/nbaplayers/index.html.erb
+++ b/app/views/nbaplayers/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Nbaplayers</h1>
+<h3>Listing NBA Players</h3>
 
 <table>
   <thead>
@@ -8,7 +8,7 @@
       <th>Name</th>
       <th>Position</th>
       <th>Team</th>
-      <th>Avg Points</th>
+      <th>Average Points</th>
       <th>Starting Lineup</th>
       <th colspan="3"></th>
     </tr>
@@ -31,5 +31,6 @@
 </table>
 
 <br>
-
-<%= link_to 'New Nbaplayer', new_nbaplayer_path %>
+<div class="links">
+  <%= link_to 'New NBA Player', new_nbaplayer_path %>
+</div>
