--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,70 +1,67 @@
 body {
   background-color: #fff;
   color: #333;
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
   line-height: 18px;
 }
 table{
   margin:0 auto;
   vertical-align: center;
-  font-size: 1.5em;
   padding: 1em;
   thead{
+    text-align: left;
     tr{
       th{
-        padding: .5em;
+        font-size: 1.5em;
+        padding: .8em;
+
       }
     }
   }
-  td{
-    padding: 1em;
+  tbody{
+    tr{
+      td{
+        font-size: 1.2em;
+        text-align: center;
+      }
+    }
   }
   p{
     font-size: 1em;
   }
-}
-
-p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 1em;
-  line-height: 18px;
-}
-
-pre {
-  background-color: #eee;
-  padding: 10px;
-  font-size: 11px;
-}
-
-a {
-  color: #000;
-  &:visited {
-    color: #666;
+  a{
+    font-size: 1em;
+    padding: .5em;
   }
-  &:hover {
+  a:hover{
     color: black;
+    text-decoration: none;
   }
+}
+.loginmessage{
+  float: top-left;
+
 }
 
 div {
   &.field, &.actions {
     margin-bottom: 10px;
-    font-size: 1.4em;
+    font-size: 1.2em;
     padding: .3em;
-    display: inline-block;
+    text-align: center;
+
   }
 }
 
 #notice {
   color: green;
+  vertical-align: middle;
 }
 
 .field_with_errors {
   padding: 2px;
   background-color: red;
-  display: table;
   margin: 0 auto;
+  display: table;
   vertical-align: middle;
 }
 
@@ -90,5 +87,22 @@ div {
   ul li {
     font-size: 12px;
     list-style: square;
+  }
+}
+
+.container-fluid{
+  .links{
+    text-align: center;
+    a{
+      font-size: 1.2em;
+      padding: .5em;
+    }
+    a:hover{
+      text-decoration: none;
+      color: black;
+    }
+  }
+  h3,h2,p{
+    text-align: center;
   }
 }
