--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>TC359Onemodelrailsapp</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <title>NBA Player Database</title>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+  <script src="https://code.jquery.com/jquery-2.1.3.min.js"</script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 <nav class="navbar navbar-default navbar-static-top">
-  <div class="container-fluid">
-  <ul>
-    <li><%= link_to 'Home', root_path %></li>
-    <li><%= link_to 'Add an NBA player', new_nbaplayer_path %></li>
-    <li><%= link_to 'NBA Player Database', nbaplayers_path %></li>
-  </ul>
+  <div class="menu">
+    <ul id="nav">
+      <li><%= link_to 'Home', root_path %></li>
+      <li><%= link_to 'Add an NBA player', new_nbaplayer_path %></li>
+      <li><%= link_to 'NBA Player Database', nbaplayers_path %></li>
+    </ul>
+  </div>
+  <div class="login">
+    <% if user_signed_in? %>
+      <li>Signed in in as <%= current_user.email %></li>
+      <li><%= link_to "Sign Out", sign_out_path, method: :delete %></li>
+    <% else %>
+       <li><%= link_to "Sign In", sign_in_path %></li>
+    <% end %>
   </div>
 </nav>
+
 <div class="container-fluid">
+  <% flash.each do |type, message| %>
+    <div class="<%= type %>">
+      <p><%= message %></p>
+    </div>
+  <% end %>
   <%= yield %>
 </div>
 </body>
