--- a/app/views/nbaplayers/index.html.erb
+++ b/app/views/nbaplayers/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Nbaplayers</h1>
+<h3>Listing NBA Players</h3>
 
 <table>
   <thead>
@@ -8,8 +8,8 @@
       <th>Name</th>
       <th>Position</th>
       <th>Team</th>
-      <th>Avgfanduelpoints</th>
-      <th>Is starting lineup</th>
+      <th>Average Points</th>
+      <th>Starting Lineup</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,7 +20,7 @@
         <td><%= nbaplayer.name %></td>
         <td><%= nbaplayer.position %></td>
         <td><%= nbaplayer.team %></td>
-        <td><%= nbaplayer.avgfanduelpoints %></td>
+        <td><%= nbaplayer.avgpoints %></td>
         <td><%= nbaplayer.is_starting_lineup %></td>
         <td><%= link_to 'Show', nbaplayer %></td>
         <td><%= link_to 'Edit', edit_nbaplayer_path(nbaplayer) %></td>
@@ -31,5 +31,6 @@
 </table>
 
 <br>
-
-<%= link_to 'New Nbaplayer', new_nbaplayer_path %>
+<div class="links">
+  <%= link_to 'New NBA Player', new_nbaplayer_path %>
+</div>
