--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,7 +31,7 @@
 .navbar .menu a{
   color: white;
   text-decoration: none;
-  font-size: 1.8em;
+  font-size: 1.6em;
 }
 .navbar .menu a:hover{
   color: gray;
@@ -39,7 +39,7 @@
 }
 .navbar .login{
   float: right;
-  background-color: white;
+  background-color: gray;
   border-radius: .2em;
   padding: .1em;
 }
@@ -51,7 +51,6 @@
 }
 .navbar .login a{
   font-size: 1em;
-  padding: 1em;
   color: black;
 }
 .navbar .login a:hover{
