--- a/app/views/nbaplayers/list.html.erb
+++ b/app/views/nbaplayers/list.html.erb
@@ -19,6 +19,7 @@
           <td><%= player[:team] %></td>
           <td><%= player[:avgpoints] %></td>
           <td><%= player[:cost] %></td>
+          <td><%= button_to "Add", {:controller => "nbaplayers", :action => "create", :name=>player[:name],:position=>player[:position],:team=>player[:team],:avgpoints=>player[:avgpoints],:cost=>player[:cost]}, :method=>:post %></td>
         </tr>
       <% end %>
     </tbody>
