--- a/app/assets/stylesheets/nbaplayers.scss
+++ b/app/assets/stylesheets/nbaplayers.scss
@@ -2,6 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import "base/variables.scss";
-@import "styles/list.scss";
-@import "styles/players.scss";
+@import "styles/plist.scss";
+@import "styles/userlineup.scss";
 
