--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>NBA Player Database</title>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale-1.0">
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <script src="https://code.jquery.com/jquery-2.1.3.min.js"</script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
@@ -14,7 +14,7 @@
 </head>
 <body>
   <nav class="navbar navbar-default navbar-static-top">
-    <div class="menu">
+    <div class="menu row-fluid">
       <ul id="nav">
         <li><%= link_to 'Home', root_path %></li>
         <% if user_signed_in? %>
@@ -23,13 +23,13 @@
         <li><%= link_to 'User Lineup', nbaplayers_path %></li>
       </ul>
     </div>
-    <div class="login">
-      <% if user_signed_in? %>
-        <li>Signed in in as <%= current_user.email %></li>
+    <div class="login row-fluid">
+       <% if user_signed_in? %>
+         <li>Signed in in as <%= current_user.email %></li>
         <li><%= link_to "Sign Out", sign_out_path, method: :delete %></li>
-      <% else %>
+       <% else %>
          <li><%= link_to "Sign In", sign_in_path %></li>
-      <% end %>
+       <% end %>
     </div>
   </nav>
   <div class="container-fluid">
