--- a/app/views/nbaplayers/home.html.erb
+++ b/app/views/nbaplayers/home.html.erb
@@ -1,2 +1,4 @@
-<h2>NBA Player Database</h2>
-<h3>A record of NBA Player statistics</h3>
+<section class="home">
+  <h2>NBA Player Database</h2>
+  <h3>A record of NBA Player statistics</h3>
+</section>
