--- a/app/assets/stylesheets/nbaplayers.scss
+++ b/app/assets/stylesheets/nbaplayers.scss
@@ -3,6 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import "base/variables.scss";
 @import "styles/nav.scss";
+@import "styles/home.scss";
 @import "styles/plist.scss";
 @import "styles/userlineup.scss";
 
