--- a/app/assets/stylesheets/styles/userlineup.scss
+++ b/app/assets/stylesheets/styles/userlineup.scss
@@ -18,13 +18,6 @@
         }
       }
     }
-    tbody{
-      tr{
-        td{
-          
-        }
-      }
-    }
     td{
       text-align: center;
       padding: .5em;
@@ -33,16 +26,19 @@
       text-align: center;
     }
   }
-}
-.graph{
-  svg{
-    background-color: gray;
-    display: block;
-    margin: 0 auto;
-    vertical-align: middle;
-    padding-top: 1em;
+  p{
+    text-align: center;
   }
-  rect{
-    fill: $concrete;
+  .graph{
+    svg{
+      background-color: gray;
+      display: block;
+      margin: 0 auto;
+      vertical-align: middle;
+      padding-top: 1em;
+    }
+    rect{
+      fill: $concrete;
+    }
   }
 }
