Updated Sass and d3js

--- a/app/assets/stylesheets/styles/userlineup.scss
+++ b/app/assets/stylesheets/styles/userlineup.scss
@@ -18,6 +18,13 @@
         }
       }
     }
+    tbody{
+      td{
+        a{
+          text-decoration: none;
+        }
+      }
+    }
     td{
       text-align: center;
       padding: .5em;
