--- a/app/views/nbaplayers/index.html.erb
+++ b/app/views/nbaplayers/index.html.erb
@@ -26,7 +26,9 @@
         </tr>
         <% end %>
         <tr>
-          <td><%= link_to 'Add more players', list_path %></td>
+          <% if user_signed_in? %>
+            <td><%= link_to 'Add more players', list_path %></td>
+          <% end %>
         </tr>
     </tbody>
   </table>
