Split nav and userlineup SCSS into modules

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,8 +14,11 @@
  *= require_self
  */
 @import "base/variables.scss";
-@import "pages/nav.scss";
-@import "pages/sessions.scss";
-@import "pages/home.scss";
-@import "pages/plist.scss";
-@import "pages/userlineup.scss";
+@import "navbar/nav.scss";
+@import "navbar/signedout.scss";
+@import "navbar/signedin.scss";
+@import "login/sessions.scss";
+@import "pages/nbaplayerhome.scss";
+@import "pages/nbaplayerlist.scss";
+@import "pages/nbauserlineup.scss";
+@import "pages/nbauserlineupgraph.scss";
