--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
        </ul>
        <% else %>
        <ul class="signed-out">
-         <li><%= link_to "Sign In", sign_in_path %></li>
+         <%= link_to "Sign In", sign_in_path %>
        </ul>
        <% end %>
     </div>
