--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
        <% if user_signed_in? %>
        <ul class="signed-in">
          <li>Signed in in as <%= current_user.email %></li>
-         <li><%= link_to "Sign Out", sign_out_path, method: :delete %></li>
+         <%= link_to "Sign Out", sign_out_path, method: :delete %>
        </ul>
        <% else %>
        <ul class="signed-out">
