Removed unnecessary imports and repeated color values from SCSS files

--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -1,5 +1,7 @@
-$silver: #bdc3c7;
-$concrete: #95a5a6;
-$clouds: #ecf0f1;
-$asbestos: #7f8c8d;
-$greensea: #16a085;
+/* Navbar color variables */
+$navbgcolor: black;
+$navlinkcolor: white;
+$navhovercolor: gray;
+
+/*Player table color bariables */
+$playertablebg: #bdc3c7;
