--- a/app/assets/stylesheets/navbar/signedin.scss
+++ b/app/assets/stylesheets/navbar/signedin.scss
@@ -1,25 +1,25 @@
 .signed-in{
   li{
-    background-color: gray;
-    color: white;
+    background-color: $navhovercolor;
+    color: $navlinkcolor;
     list-style-type: none;
     display: inline;
     padding: .5em;
     border-radius: .3em;
   }
    a{
-    background-color: black;
+    background-color: $navbgcolor;
     font-size: 1.5em;
     padding: .5em;
     text-decoration: none;
-    color: white;
+    color: $navlinkcolor;
     width: 1em;
     transition: background-color 1s;
     border-radius: .3em;
   }
   a:hover{
-    color: white;
-    background-color: gray;
+    color: $navlinkcolor;
+    background-color: $navhovercolor;
     border-radius: .3em;
   }
 }
