--- a/app/assets/stylesheets/pages/nbaplayerlist.scss
+++ b/app/assets/stylesheets/pages/nbaplayerlist.scss
@@ -1,5 +1,3 @@
-@import "base/variables.scss";
-
 .plist{
   h3{
     text-align: center;
@@ -7,7 +5,7 @@
   .players-list-table{
     margin: 0 auto;
     vertical-align: middle;
-    background-color: $silver;
+    background-color: $playertablebg;
     thead{
       padding: 1em;
       tr{
