--- a/app/assets/stylesheets/pages/nbauserlineup.scss
+++ b/app/assets/stylesheets/pages/nbauserlineup.scss
@@ -1,5 +1,3 @@
-@import "base/variables.scss";
-
 .userlineup{
   h3{
     text-align: center;
@@ -8,7 +6,7 @@
     border-radius: 1em;
     margin: 0 auto;
     vertical-align: middle;
-    background-color: $silver;
+    background-color: $playertablebg;
     thead{
       padding: 1em;
       tr{
@@ -19,19 +17,9 @@
         }
       }
     }
-    tbody{
-      td{
-        a{
-          text-decoration: none;
-        }
-      }
-    }
     td{
       text-align: center;
       padding: .5em;
-    }
-    a{
-      text-align: center;
     }
   }
 }
