--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import "base/variables.scss";
+@import "base/body.scss";
 @import "navbar/nav.scss";
 @import "navbar/signedout.scss";
 @import "navbar/signedin.scss";
