--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,25 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <script src="https://code.jquery.com/jquery-2.1.3.min.js"</script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <script src="/assets"
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <nav class="navbar navbar-stacked navbar-static-top">
-    <div class="menu row-fluid">
+  <nav class="navbar">
+    <div class="menu">
       <ul id="nav">
         <li><%= link_to 'Home', root_path %></li>
-        <% if user_signed_in? %>
-          <li><%= link_to 'Add NBA Players', list_path %></li>
-        <% end %>
-        <li><%= link_to 'User Lineup', nbaplayers_path %></li>
+        <li><%= link_to 'Create Lineup', list_path %></li>
       </ul>
     </div>
-    <div class="login row-fluid">
+    <div class="login">
        <% if user_signed_in? %>
        <ul class="signed-in">
          <li>Signed in in as <%= current_user.email %></li>
@@ -36,7 +31,7 @@
        <% end %>
     </div>
   </nav>
-  <div class="container-fluid">
+  <div class="content">
     <% flash.each do |type, message| %>
       <div class="<%= type %>">
         <p><%= message %></p>
