--- a/app/assets/stylesheets/pages/nbauserlineup.scss
+++ b/app/assets/stylesheets/pages/nbauserlineup.scss
@@ -1,8 +1,7 @@
 .userlineup{
-  float: middle-right;
   width: 5em;
   h3{
-    text-align: center;
+    text-align: left;
   }
   .user-lineup-table{
     border-radius: 1em;
