--- a/app/views/nbaplayers/list.html.erb
+++ b/app/views/nbaplayers/list.html.erb
@@ -1,12 +1,45 @@
+<div class="userlineup">
+  <p id="notice"><%= notice %></p>
+  <h3>User Lineup</h3>
+  <table class="user-lineup-table sortable">
+    <thead>
+      <tr>
+        <th>Pos</th>
+        <th>Name</th>
+        <th>Team</th>
+        <th>Avg.</th>
+        <th>Cost</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @nbaplayers.each do |nbaplayer| %>
+        <tr>
+          <td><%= nbaplayer[:position] %></td>
+          <td><%= nbaplayer[:name] %></td>
+          <td><%= nbaplayer[:team]%></td>
+          <td><%= nbaplayer[:avgpoints] %></td>
+          <td><%= nbaplayer[:cost] %></td>
+          <td><%= button_to 'Remove', nbaplayer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+        <% end %>
+        <tr>
+          <td>Cost Sum:<%= @costsum %></td>
+          <td>Avg Sum:<%= @avgsum %></td>
+        </tr>
+    </tbody>
+  </table>
+  <br>
+</div>
 <div class="plist">
   <h1>FanDuel List</h1>
   <table class="players-list-table sortable">
     <thead>
       <tr>
+        <th>Pos</th>
         <th>Name</th>
-        <th>Position</th>
         <th>Team</th>
-        <th>Average Points</th>
+        <th>Avg.</th>
         <th>Cost</th>
         <th colspan="3"></th>
       </tr>
@@ -25,37 +58,4 @@
     </tbody>
   </table>
 </div>
-<div class="userlineup">
-  <p id="notice"><%= notice %></p>
-  <h3>User Lineup</h3>
-  <table class="user-lineup-table sortable">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Position</th>
-        <th>Team</th>
-        <th>Average Points</th>
-        <th>Cost</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @nbaplayers.each do |nbaplayer| %>
-        <tr>
-          <td><%= nbaplayer[:name] %></td>
-          <td><%= nbaplayer[:position] %></td>
-          <td><%= nbaplayer[:team]%></td>
-          <td><%= nbaplayer[:avgpoints] %></td>
-          <td><%= nbaplayer[:cost] %></td>
-          <td><%= button_to 'Remove', nbaplayer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </tr>
-        <% end %>
-        <tr>
-          <% if user_signed_in? %>
-            <td class="addmore"><%= link_to 'Add more players', list_path %></td>
-          <% end %>
-        </tr>
-    </tbody>
-  </table>
-  <br>
-</div>
+
