--- a/app/views/nbaplayers/show.html.erb
+++ b/app/views/nbaplayers/show.html.erb
@@ -29,5 +29,5 @@
   <% if user_signed_in? %>
     <%= link_to 'Edit', edit_nbaplayer_path(@nbaplayer) %> |
   <% end %>
-  <%= link_to 'Back', nbaplayers_path %>
+  <%= link_to 'Back', list_path %>
 </div>
