--- a/app/views/lineups/_lineup_row.html.erb
+++ b/app/views/lineups/_lineup_row.html.erb
@@ -11,7 +11,7 @@
         <div class="row">
           <div class="col-xs-4">
             <%= f.number_field :quantity, value: lineup_item.quantity.to_i, class: "form-control", min: 1 %>
-            <%= f.hidden_field :nbaplayer_id, value: product.id %>
+            <%= f.hidden_field :id, value: nbaplayer.id %>
           </div>
           <div class="col-xs-8 text-right">
             <div class="btn-group">
