--- a/app/views/nbaplayers/list.html.erb
+++ b/app/views/nbaplayers/list.html.erb
@@ -20,7 +20,7 @@
           <td><%= nbaplayer[:team]%></td>
           <td><%= nbaplayer[:avgpoints] %></td>
           <td><%= nbaplayer[:cost] %></td>
-          <td><%= button_to 'Remove', nbaplayer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= button_to "Add", {:controller => "lineup_items",:action=>"create", :id=>nbaplayer[:id], method: :post}%>
         </tr>
         <% end %>
         <tr>
@@ -31,31 +31,5 @@
   </table>
   <br>
 </div>
-<div class="plist">
-  <h1>FanDuel List</h1>
-  <table class="players-list-table sortable">
-    <thead>
-      <tr>
-        <th>Pos</th>
-        <th>Name</th>
-        <th>Team</th>
-        <th>Avg.</th>
-        <th>Cost</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @players.each do |player| %>
-        <tr>
-          <td><%= player[:position] %></td>
-          <td><%= player[:name] %></td>
-          <td><%= player[:team] %></td>
-          <td><%= player[:avgpoints] %></td>
-          <td><%= player[:cost] %></td>
-          <td><%= button_to "Add", {:controller => "nbaplayers", :action => "create", :name=>player[:name],:position=>player[:position],:team=>player[:team],:avgpoints=>player[:avgpoints],:cost=>player[:cost].delete('/$/,/').to_i}, :method=>:post %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
+
 
