--- a/app/views/nbaplayers/index.html.erb
+++ b/app/views/nbaplayers/index.html.erb
@@ -13,7 +13,7 @@
       </tr>
     </thead>
     <tbody>
-      <% @nbaplayers.each do |nbaplayer| %>
+      <% @players.each do |nbaplayer| %>
         <tr>
           <td><%= nbaplayer[:name] %></td>
           <td><%= nbaplayer[:position] %></td>
