--- a/app/assets/stylesheets/base/body.scss
+++ b/app/assets/stylesheets/base/body.scss
@@ -1,7 +1,7 @@
 body{
   background: none;
   padding: 0;
-  margin: 0;
+  margin: auto;
   font-family: 'Helvetica', 'sans-serif';
   a{
     text-decoration: none;
