--- a/app/views/nbaplayers/list.html.erb
+++ b/app/views/nbaplayers/list.html.erb
@@ -1,7 +1,7 @@
-<div class="userlineup">
+<div class="roster">
   <p id="notice"><%= notice %></p>
   <h3>User Lineup</h3>
-  <table class="user-lineup-table sortable">
+  <table class="player_roster sortable">
     <thead>
       <tr>
         <th>Pos</th>
@@ -9,11 +9,11 @@
         <th>Team</th>
         <th>Avg.</th>
         <th>Cost</th>
-        <th colspan="3"></th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
-      <% @nbaplayers.each do |nbaplayer| %>
+      <% @nbaplayers.where(:position=>'PG').each do |nbaplayer|%>
         <tr>
           <td><%= nbaplayer[:position] %></td>
           <td><%= nbaplayer[:name] %></td>
@@ -23,6 +23,48 @@
           <td><%= button_to "Add", {:controller => "lineup_items",:action=>"create", :id=>nbaplayer[:id], method: :post}%>
         </tr>
         <% end %>
+    </tbody>
+  </table>
+  <br>
+</div>
+<div class="userlineup">
+  <p id="notice"><%= notice %></p>
+  <h3>Your Lineup</h3>
+  <table class="user-lineup-table sortable">
+    <thead>
+      <tr>
+        <th class="leftmost">Pos.</th>
+        <th>Name</th>
+        <th>Team</th>
+        <th>Avg. Points</th>
+        <th>Cost</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr><td class="leftmost">PG</td></tr>
+      <tr><td class="leftmost">PG</td></tr>
+      <tr><td class="leftmost">SG</td></tr>
+      <tr><td class="leftmost">SG</td></tr>
+      <tr><td class="leftmost">SF</td></tr>
+      <tr><td class="leftmost">SF</td></tr>
+      <tr><td class="leftmost">PF</td></tr>
+      <tr><td class="leftmost">PF</td></tr>
+      <tr><td class="leftmost">C</td></tr>
+      <% @players.each do |nbaplayer| %>
+        <tr>
+          <td class="leftmost"><%= nbaplayer[:position] %></td>
+          <td><%= nbaplayer[:name] %></td>
+          <td><%= nbaplayer[:team]%></td>
+          <td><%= nbaplayer[:avgpoints] %></td>
+          <td><%= nbaplayer[:cost] %></td>
+          <td><%= button_to "+", {} %></td>
+            <td><%= button_to 'Remove', nbaplayer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
+        </tr>
+        <tr>
+            <td class="addmore"><%= link_to 'Add more players', list_path %></td>
+        </tr>
         <tr>
           <td>Cost Sum:<%= @costsum %></td>
           <td>Avg Sum:<%= @avgsum %></td>
@@ -30,6 +72,7 @@
     </tbody>
   </table>
   <br>
+  <div class="graph">
+    <p>Dollars per point</p>
+  </div>
 </div>
-
-
